--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,6 @@
         font-size: 0.7em;
         color: black;
         text-shadow: 0px 0px wheat;
-        background: white
-
+        background: white;
     }
 }
